--- a/FE/public/index.html
+++ b/FE/public/index.html
@@ -82,6 +82,9 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item">
                                 <a class="nav-link" href="login">Login</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="register">Register</a>
+                            </li>
                         </ul>
                     </div>
 
